--- a/.github/workflows/inReviewObserver.yml
+++ b/.github/workflows/inReviewObserver.yml
@@ -12,10 +12,14 @@ jobs:
     steps:
       - name: Check if linked to open issue
         run: |
+          echo "GITHUB_EVENT_PATH is [$GITHUB_EVENT_PATH]"
           issue_number=$(jq --raw-output .issue.number "$GITHUB_EVENT_PATH")
+          echo "Issue number is [$issue_number]"
           linked_issue=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/issues/$issue_number" \
             | jq --raw-output '.pull_request.url')
+          echo "Bearer token is [$GITHUB_TOKEN](${{ secrets.GITHUB_TOKEN }}) and repo is [$GITHUB_REPOSITORY] (${{ github.repository }}))"
+          echo "Linked issue is [$linked_issue]"
 
           if [[ -n "$linked_issue" ]]; then
             echo "Hello World"
